[package]
name = "babycat"
version = "0.1.0"
authors = ["Neocrym Records Inc <engineering@neocrym.com>"]
edition = "2018"
description = "An audio decoding and manipulation library, with bindings for C, Python, and WebAssembly."
readme = "README.md"
homepage = "https://babycat.io"
repository = "https://github.com/babycat-io/babycat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "resample_benchmark"
harness = false

[[bin]]
name = "babycat"
path = "src/bin/babycat/main.rs"
required-features = ["frontend-binary"]

[lib]
name = "babycat"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.13"
float-cmp= "0.8"
hound = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["serde"]}

# for multithreading
rayon = { version = "1.5", optional = true }

# for libsamplerate
samplerate = { version = "0.2", optional = true }

# for webassembly frontend
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.50", optional = true }

# for python frontend
numpy = { version = "0.13", optional = true }
pyo3 = { version = "0.13", optional = true }

# for binary targets
env_logger = { version = "0.8", optional = true }
structopt = { version = "0.3", optional = true }
rodio = { version = "0.13.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies.symphonia]
version = "0.2"
features = [
    "aac",
    "flac",
    "mp3",
    "pcm",
    "isomp4",
    "wav",
    "ogg",
]

[features]
default = ["frontend-rust"]

enable-filesystem = []
enable-multithreading = ["rayon"]
enable-libsamplerate = ["samplerate"]

enable-all-backend-features = [
    "enable-filesystem",
    "enable-multithreading",
    "enable-libsamplerate",
]

frontend-binary = [
    "enable-all-backend-features",
    "env_logger",
    "structopt",
    "rodio",
]
frontend-rust = [
    "enable-all-backend-features",
]
frontend-rust-binary = [
    "enable-all-backend-features",
    "structopt"
]
frontend-wasm = [
    "wasm-bindgen",
    "js-sys"
]
frontend-python = [
    "enable-all-backend-features",
    "numpy",
    "pyo3",
    "pyo3/extension-module",
    "pyo3/abi3",
    "pyo3/abi3-py36",
]
frontend-c = [
    "enable-all-backend-features"
]

[package.metadata.maturin]
requires-dist = ["numpy >= 1.16.0"]
classifier = [
    "Programming Language :: Rust"
]
