[package]
name = "babycat-cli"
version = "0.1.0"
authors = ["Neocrym Records Inc <engineering@neocrym.com>"]
edition = "2018"
homepage = "https://babycat.io"
repository = "https://github.com/babycat-io/babycat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babycat = { path = "../babycat" }
structopt = "0.3"