[package]
name = "babycat"
version = "0.1.0"
authors = ["Neocrym Records Inc <engineering@neocrym.com>"]
edition = "2018"
description = "An audio decoding and manipulation library, with bindings for C, Python, and WebAssembly."
readme = "../README.md"
homepage = "https://babycat.io"
repository = "https://github.com/babycat-io/babycat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp= "0.8"
hound = "3.4"
rayon = "1.5"
samplerate = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.symphonia]
version = "0.2"
features = [
    "aac",
    "flac",
    "mp3",
    "pcm",
    "isomp4",
    "wav",
    "ogg",
]

[features]
default = ["frontend-rust"]

frontend-rust = []